<resources>
    <string name="app_name">Horoscopo-Android</string>

    <string name="horoscope_name_aries">Aries</string>
    <string name="horoscope_name_taurus">Taurus</string>
    <string name="horoscope_name_gemini">Gemini</string>
    <string name="horoscope_name_cancer">Cancer</string>
    <string name="horoscope_name_leo">Leo</string>
    <string name="horoscope_name_virgo">Virgo</string>
    <string name="horoscope_name_libra">Libra</string>
    <string name="horoscope_name_scorpio">Scorpio</string>
    <string name="horoscope_name_sagittarius">Sagittarius</string>
    <string name="horoscope_name_capricorn">Capricorn</string>
    <string name="horoscope_name_aquarius">Aquarius</string>
    <string name="horoscope_name_pisces">Pisces</string>

    <string name="horoscope_date_aries">March 21 to April 19</string>
    <string name="horoscope_date_taurus">April 20 to May 20</string>
    <string name="horoscope_date_gemini">May 21 to June 20</string>
    <string name="horoscope_date_cancer">June 21 to July 22</string>
    <string name="horoscope_date_leo">July 23 to August 22</string>
    <string name="horoscope_date_virgo">August 23 to September 22</string>
    <string name="horoscope_date_libra">September 23 to October 22</string>
    <string name="horoscope_date_scorpio">October 23 to November 21</string>
    <string name="horoscope_date_sagittarius">November 22 to December 21</string>
    <string name="horoscope_date_capricorn">December 22 to January 19</string>
    <string name="horoscope_date_aquarius">January 20 to February 18</string>
    <string name="horoscope_date_pisces">February 19 to March 20</string>


    <string name="mensaje_muy_bueno">Hoy es un día espectacular para tu vida amorosa. Todo lo que toques en el ámbito sentimental tendrá un resultado positivo. Puede surgir un encuentro inesperado que te llene de alegría y emoción, así que mantén tu corazón abierto y aprovecha cada momento con pasión y sinceridad.</string>

    <string name="mensaje_bueno">Tu día amoroso será agradable y tranquilo. Podrás disfrutar de momentos tiernos y conversaciones profundas con esa persona especial. Es un buen momento para fortalecer vínculos existentes y dejar que la conexión crezca de manera natural.</string>

    <string name="mensaje_normal">Hoy será un día neutro en el amor. No ocurrirán grandes sorpresas ni conflictos importantes. Puede que tengas la oportunidad de reflexionar sobre tus sentimientos y tu relación, así que aprovecha para observar y planificar sin presiones.</string>

    <string name="mensaje_malo">El día podría traer algunos malentendidos o pequeños conflictos en tu vida sentimental. Mantén la calma y evita tomar decisiones impulsivas. La paciencia y la comunicación serán claves para superar los obstáculos y prevenir problemas mayores.</string>

    <string name="mensaje_muy_malo">Hoy es un día complicado para el amor. Podrían surgir discusiones o decepciones inesperadas. Evita confrontaciones y no te dejes llevar por impulsos negativos. Mantente firme, cuida tus emociones y recuerda que los malos momentos también pasan.</string>
    <string name="zodiac_compatibility_next">Next</string>
    <string name="averigua_como_de_fuerte_son_vuestros_lazos">AVERIGUA COMO DE FUERTE SON VUESTROS LAZOS</string>
    <string name="chose_sign">ELIJA SU SIGNO</string>
    <string name="compat_bad">MALO MALO MALO</string>
    <string name="compat_normal">NORMAL NORMAL NORMAL</string>
    <string name="compat_good">BUENO BUENO BUENO</string>

    <string-array name="zodiac_array">
        <item>Elija su signo...</item>
        <item>Aries</item>
        <item>Tauro</item>
        <item>Géminis</item>
        <item>Cáncer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Escorpio</item>
        <item>Sagitario</item>
        <item>Capricornio</item>
        <item>Acuario</item>
        <item>Piscis</item>
    </string-array>


</resources>